// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/paper Paper should render a component with an elevation of 3 1`] = `
<div
  className="ui-paper ui-paper--level-3 ui-paper--hover-level-1 emotion-0 emotion-1"
  onClick={undefined}
  style={Object {}}
>
  Paper Contents
</div>
`;

exports[`components/paper Paper should render shallow component ok 1`] = `
<div
  className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-1"
  onClick={undefined}
  spacing={true}
  style={Object {}}
>
  Paper Contents
</div>
`;

exports[`components/paper PaperToolbar should render shallow component ok 1`] = `
<div
  className="ui-paper-toolbar emotion-0 emotion-1"
  style={Object {}}
>
  <div
    className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-1"
    onClick={undefined}
    style={Object {}}
  >
    Toolbar child contents
  </div>
</div>
`;
